# pepotron

./: .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  RELEASING.md  pyproject.toml  requirements-mypy.txt  requirements-typing.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: deploy.yml  labels.yml  lint.yml  release-drafter.yml  test.yml
scripts/: run_command.py
src/pepotron/: __init__.py  __main__.py  _cache.py  cli.py
src/pepotron/scripts/: run_command.py
tests/: test_cache.py  test_pep.py  test_pepotron.py
