[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs",
  "hatchling",
]

[project]
name = "pepotron"
description = "CLI to open PEPs in your browser"
readme = "README.md"
keywords = [
  "bpo",
  "cli",
  "pep",
]
license = "MIT"
license-files = [ "LICENSE.txt" ]
authors = [ { name = "Hugo van Kemenade" } ]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3.15",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = [ "version" ]
dependencies = [
  "ghapi<2",
  "platformdirs",
  "python-slugify",
  "rapidfuzz",
  "urllib3>=2",
  "yaspin",
]
optional-dependencies.tests = [
  "freezegun",
  "pytest>=9",
  "pytest-cov",
]
urls."Issue tracker" = "https://github.com/hugovk/pepotron/issues"
urls.Changelog = "https://github.com/hugovk/pepotron/releases"
urls.Homepage = "https://github.com/hugovk/pepotron"
urls.Source = "https://github.com/hugovk/pepotron"
scripts.bpo = "pepotron.cli:bpo"
scripts.pep = "pepotron.cli:main"
scripts.pepotron = "pepotron.cli:main"

[tool.hatch]
version.source = "vcs"
version.raw-options.local_scheme = "no-local-version"
build.hooks.vcs.version-file = "src/pepotron/_version.py"

[tool.ruff]
fix = true
lint.select = [
  "C4",     # flake8-comprehensions
  "E",      # pycodestyle errors
  "EM",     # flake8-errmsg
  "F",      # pyflakes
  "I",      # isort
  "ICN",    # flake8-import-conventions
  "ISC",    # flake8-implicit-str-concat
  "LOG",    # flake8-logging
  "PGH",    # pygrep-hooks
  "PIE",    # flake8-pie
  "PT",     # flake8-pytest-style
  "PYI",    # flake8-pyi
  "RUF022", # unsorted-dunder-all
  "RUF100", # unused noqa (yesqa)
  "SIM117", # multiple-with-statements
  "UP",     # pyupgrade
  "W",      # pycodestyle warnings
  "YTT",    # flake8-2020
]
lint.ignore = [
  "E203",   # Whitespace before ':'
  "E221",   # Multiple spaces before operator
  "E226",   # Missing whitespace around arithmetic operator
  "E241",   # Multiple spaces after ','
  "PIE790", # flake8-pie: unnecessary-placeholder
]
lint.flake8-import-conventions.aliases.datetime = "dt"
lint.flake8-import-conventions.banned-from = [ "datetime" ]
lint.flake8-pytest-style.parametrize-names-type = "csv"
lint.isort.known-first-party = [ "pepotron" ]
lint.isort.required-imports = [ "from __future__ import annotations" ]
lint.future-annotations = true

[tool.pyproject-fmt]
max_supported_python = "3.15"

[tool.mypy]
strict = true
pretty = true
show_error_codes = true

[tool.pytest]
addopts = [ "--color=yes" ]
filterwarnings = [
  "ignore:color, on_color and attrs are not supported when output stream is not a TTY:UserWarning:yaspin",
]
minversion = "9.0"
testpaths = [ "tests" ]

[tool.coverage]
run.omit = [
  "**/__main__.py",
  "**/cli.py",
  "**/scripts/*",
]
# Regexes for lines to exclude from consideration
report.exclude_also = [
  "def _get_github_prs",
  "except ImportError:",
  "except OSError:",
  # Don't complain if non-runnable code isn't run:
  "if __name__ == .__main__.:",
  "if not dry_run:",
]
