[metadata]
name = pepotron
description = CLI to open PEPs in your browser
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hugovk/pepotron
author = Hugo van Kemenade
license = MIT
license_file = LICENSE.txt
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
keywords =
    pep
    cli
project_urls =
    Source=https://github.com/hugovk/pepotron
    Changelog=https://github.com/hugovk/pepotron/releases

[options]
packages = find:
install_requires =
    httpx>=0.22
    platformdirs
    python-slugify
    thefuzz
    importlib-metadata;python_version < '3.8'
python_requires = >=3.7
package_dir = =src
setup_requires =
    setuptools-scm
zip_safe = True

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pep = pepotron.cli:main

[options.extras_require]
tests =
    freezegun
    pytest
    pytest-cov

[flake8]
max_line_length = 88

[tool:isort]
profile = black

[tool:pytest]
addopts = --color=yes
